--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^13.0.0",
     "eslint-plugin-import": "^2.13.0",
+    "nodemon": "^1.18.3",
     "request": "^2.87.0",
     "supertest": "^3.1.0",
     "tap-spec": "^5.0.0",
